SvarDOS TREE History / Changes

Oct 10, 2024   SvarDOS TREE 20241010   Mateusz Viste
               - ported to Open Watcom, builds with a makefile
               - replaced all C++ things by proper ANSI C
               - stripped the Windows API simulation
               - removed LFN support
               - replaced CATS by SvarLANG
               - removed all printf calls
               - memory optimizations
               - lots of code simplifications and refactorizations
               - documented all switches in /?
               - added PL language
               - added DE language (contributed by Bernd Boeckmann)

Sept 12, 2005  pdTree V1.04 Release   KJD
               Add /DS option to display alternate streams in files
               on Windows NT systems with NTFS.  Use with /F option.
               See notes for V1.03 Beta about DOS version.

Dec 03, 2004   --   KJD
               Official source now in fdos project cvs on SourceForge.
               Moved fixstub to TOOLS module (fixhdr).

May 30, 2004   pdTree V1.03 Beta Release   KJD
               Fix so runs on Windows 95 again and compiles for DOS.
               On NT we use its advanced FindFirstFileEx (which may
               limit search results to just directories, that is,
               may omit extranous filename matches).
               Warning: The /U option should not be used when
               ran under pure DOS, as the DOS executable [stub]
               does not yet properly map characters outside of
               7bit ASCII range to Unicode equivalent.
               Warning: The DOS version may exit early due to
               out of memory errors or findnext failing too early.

May 29, 2004   pdTree V1.03 Alpha Release   KJD
               Update DOS version to properly query screen size
               and detect if output is redirected or not,
               so /P produces more correct results.  [Note:
               if ran under Windows XP (R) console, the size